--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.rohan.myimdb"
+        applicationId "com.rohan.movieroll"
         minSdkVersion 17
         targetSdkVersion 24
         versionCode 1
