--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.rohan.movieroll"
         minSdkVersion 17
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
 
         buildTypes.each{
             it.buildConfigField 'String', 'API_KEY', APIKey
@@ -44,4 +44,8 @@ dependencies {
     compile 'com.amstronghuang.slider:library:1.1.3@aar'
     compile 'com.jakewharton:butterknife:8.2.1'
 
+    compile 'com.google.android.gms:play-services-ads:11.2.0'
+    compile 'com.google.firebase:firebase-core:11.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
