--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 2
         versionName "2.0"
 
-        buildTypes.each{
+        buildTypes.each {
             it.buildConfigField 'String', 'API_KEY', APIKey
         }
     }
@@ -26,11 +26,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
 
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
-    compile 'com.android.support:appcompat-v7:26.+'
+
+    compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support:support-compat:26.0.1'
     compile 'me.grantland:autofittextview:0.2.1'
     compile 'com.android.support:cardview-v7:26.0.1'
@@ -40,12 +39,16 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.facebook.fresco:fresco:0.7.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.amstronghuang.slider:library:1.1.3@aar'
+    compile 'com.android.support:design:26.0.1'
     compile 'com.jakewharton:butterknife:8.2.1'
-
     compile 'com.google.android.gms:play-services-ads:11.2.0'
     compile 'com.google.firebase:firebase-core:11.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
