--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.1'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.rohan.movieroll"
         minSdkVersion 17
-        targetSdkVersion 26
-        versionCode 3
-        versionName "2.0"
+        targetSdkVersion 27
+        versionCode 4
+        versionName "2.1"
 
         buildTypes.each {
             it.buildConfigField 'String', 'API_KEY', APIKey
@@ -18,37 +17,40 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
+ext {
+    sup = '27.0.2'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-
-
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.android.support:support-compat:26.0.1'
+    compile "com.android.support:appcompat-v7:$sup"
+    compile "com.android.support:support-compat:$sup"
     compile 'me.grantland:autofittextview:0.2.1'
-    compile 'com.android.support:cardview-v7:26.0.1'
-    compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile "com.android.support:cardview-v7:$sup"
+    compile "com.android.support:recyclerview-v7:$sup"
     compile 'com.github.varunest:sparkbutton:1.0.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.facebook.fresco:fresco:0.7.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.amstronghuang.slider:library:1.1.3@aar'
-    compile 'com.android.support:design:26.0.1'
-    compile 'com.jakewharton:butterknife:8.2.1'
-    compile 'com.google.android.gms:play-services-ads:11.2.0'
-    compile 'com.google.firebase:firebase-core:11.2.0'
+    compile "com.android.support:design:$sup"
+    compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
