--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,15 @@
 
 buildscript {
     repositories {
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
         jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.google.gms:google-services:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.google.gms:google-services:4.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,14 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
-
-        maven {
-            url "https://jitpack.io"
-        }
-        maven {
-            url 'https://maven.google.com'
-        }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
         jcenter()
+        google()
+        mavenCentral()
     }
 }
 
